--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/blog
 
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.flyway.enabled=false
+spring.liquibase.enabled=true
+spring.liquibase.change-log=db/changelog/db.changelog.xml
+
+spring.liquibase.drop-first=false
